Passport stuff added also swagger docs regenerated.
