# storage/api-docs/api-docs.json
@@ -220,24 +220,6 @@
                 }
             }
         },
-        "/logout": {
-            "get": {
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Invalidates user access token.",
-                "description": "Returns message JSON Object response.",
-                "operationId": "getLogout",
-                "responses": {
-                    "200": {
-                        "description": "Token invalidated successfully"
-                    },
-                    "401": {
-                        "description": "Unauthenticated."
-                    }
-                }
-            }
-        },
         "/near/{type}": {
             "get": {
                 "tags": [
@@ -281,24 +263,6 @@
                     },
                     "400": {
                         "description": "Bad request"
-                    }
-                }
-            }
-        },
-        "/refresh": {
-            "post": {
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Get fresh authentication token.",
-                "description": "Returns the user personal access token.",
-                "operationId": "getFreshToken",
-                "responses": {
-                    "200": {
-                        "description": "Token retrieved successfully"
-                    },
-                    "401": {
-                        "description": "Unauthenticated."
                     }
                 }
             }
@@ -1459,24 +1423,6 @@
                     },
                     "400": {
                         "description": "Bad request"
-                    }
-                }
-            }
-        },
-        "/token": {
-            "post": {
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Get authentication token based on user credentials.",
-                "description": "Returns the user personal access token.",
-                "operationId": "getToken",
-                "responses": {
-                    "200": {
-                        "description": "Token retrieved successfully"
-                    },
-                    "401": {
-                        "description": "Unauthenticated."
                     }
                 }
             }
